# header_shadowing

option1/: CMakeLists.txt  README.md
option1/test/include/: service.hpp
option2/: README.md
option2/production/include/: service.hpp  shim_service.hpp
option2/production/src/: main.cpp
option2/test/include/: service.hpp
